smb-broker/ytt/deployment.yaml
#@ load("@ytt:data", "data")
#@ load("@ytt:base64", "base64")

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: #@ data.values.smbbroker.fullname
spec:
  replicas: #@ data.values.replicaCount
  selector:
    matchLabels:
      app.kubernetes.io/name: #@ data.values.smbbroker.name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: #@ data.values.smbbroker.name
    spec:
      serviceAccountName: #@ data.values.smbbroker.fullname
      automountServiceAccountToken: true
      containers:
        - name: smb-broker
          image: #@ data.values.image.repository + ":" + data.values.image.tag
          imagePullPolicy: #@ data.values.image.pullPolicy
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          startupProbe:
            httpGet:
              path: /v2/catalog
              port: 8080
              httpHeaders:
                - name: Authorization
                  value: #@ "Basic " + base64.encode(data.values.smbBrokerUsername + ":" + data.values.smbBrokerPassword)
            failureThreshold: 10
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /v2/catalog
              port: 8080
              httpHeaders:
                - name: Authorization
                  value: #@ "Basic " + base64.encode(data.values.smbBrokerUsername + ":" + data.values.smbBrokerPassword)
            failureThreshold: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /v2/catalog
              port: 8080
              httpHeaders:
                - name: Authorization
                  value: #@ "Basic " + base64.encode(data.values.smbBrokerUsername + ":" + data.values.smbBrokerPassword)
            failureThreshold: 20
            periodSeconds: 10
