smb-broker/ytt/service.yaml
#@ load("@ytt:data", "data")

apiVersion: v1
kind: Service
metadata:
  name: #@ data.values.smbbroker.fullname
spec:
  type: #@ data.values.service.type
  ports:
    - port: #@ data.values.service.port
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: #@ data.values.smbbroker.name
